# system-info-collector

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: cli.rs  collector.rs  csv_file_loader.rs  enums.rs  main.rs  model.rs  ploty_creator.rs
