[package]
name = "system_info_collector"
version = "0.5.1"
authors = ["Rafał Mikrut <qarminkrut@gmail.com>"]
edition = "2021"
rust-version = "1.70.0"
description = "Simple and fast application to collect os information and create graphs based on it"
license = "MIT"
homepage = "https://github.com/qarmin/system-info-collector"
repository = "https://github.com/qarmin/system-info-collector"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3"
ctrlc = { version = "3.4", features = ["termination"] }
sysinfo = { version = "0.30" }
tokio = { version = "1.37", features = ["full"] }
handsome_logger = "0.8"
log = "0.4"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
open = "5.1"
plotly = "0.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
humansize = "2.1.3"
clap = { version = "4.4", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
regex = "1.10"

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = "fat"
codegen-units = 1
